fixes some bugs on IE

--- a/public/stylesheets/homePage.css
+++ b/public/stylesheets/homePage.css
@@ -27,9 +27,21 @@
   font-family: 'Alfa slab One', 'secondaryFont';
   color: #B8860B;
   position: relative;
-  -webkit-text-stroke: 3px #000000;
-  -webkit-text-fill-color: #B8860B;
+  text-shadow:
+   -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000;
 }
+
+@supports (-webkit-text-stroke: 1px black) {
+  .title {
+    text-shadow: none;
+    -webkit-text-stroke: 3px #000000;
+    -webkit-text-fill-color: #B8860B;
+  }
+}
+
 
 .inner {
   width: auto;
